<resources>
    <string name="app_name">ConversaAI</string>
    <string name="title_activity_starting1">starting1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="todo1">TODO</string>
    <string name="textview">TextView</string>
    <string name="text">Text</string>
    <string name="start_the_bot">Start the Bot</string>
    <string name="type_a_message">Type a message</string>
    <string name="let_s_get_started">Let\'s Get Started</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register_">Register</string>
    <string name="login">Login</string>
    <string name="login_">Login</string>
    <string name="login_1">LOGIN</string>
    <string name="register_1">Register</string>
    <string name="conversa_ai">Conversa AI</string>
    <string name="todo_">TODO</string>
    <string name="type">Type a message...</string>
</resources>