<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">



        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register"
            android:textColor="#039BE5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/name"
                style="@style/modifiedEditText"
                android:autofillHints="name"
                android:background="@drawable/round_border"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/mobile"
                style="@style/modifiedEditText"
                android:autofillHints="phone"
                android:background="@drawable/round_border"
                android:hint="@string/mobile_number"
                android:inputType="text"
                android:textColor="@color/black"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/email"
                style="@style/modifiedEditText"
                android:autofillHints="emailAddress"
                android:textColor="@color/black"
                android:background="@drawable/round_border"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/password"
                style="@style/modifiedEditText"
                android:autofillHints="password"
                android:background="@drawable/round_border"
                android:hint="@string/login_password_hint"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnregister"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/register_"
            android:textColor="#E91E63"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtlogin"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="#039BE5"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.cardview.widget.CardView>