<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/loginBkColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login"
            android:textColor="#039BE5"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:autofillHints="emailAddress"
                android:hint="@string/login_email_hint"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="@drawable/round_border"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:autofillHints="password"
                android:hint="@string/login_password_hint"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/round_border"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/login_"
            android:textColor="#E91E63"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <TextView
            style="@style/parent"
            android:id="@+id/Register_u"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textColor="#039BE5"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.cardview.widget.CardView>